# InvestAI

./: .gitignore  .pre-commit-config.yaml  .ship-e2e-output.txt  AGENTS.md  CLAUDE.md  DATABASE_MIGRATION.md  MARKET_ANALYSIS.html  MARKET_ANALYSIS.md  PROGRESS.md  README.md  RESEARCH_STOCK_PREDICTION.md  SECURITY_AUDIT.md  STOCK_BEHAVIOR_RESEARCH.md  STOCK_PREDICTION_RESEARCH.md  TESTING_STRATEGY.md  _check_render.py  _expand_universe.py  _expand_universe2.py  _final_check.py  _speed_test.ps1  _speed_test2.ps1  _verify_flow.py  database.py  e2e_fresh.txt  e2e_results.txt  final_test_results.txt  main.py  make_admin.py  models.py  pyproject.toml  pytest.ini  render.yaml  requirements-dev.txt  requirements.txt  run.ps1  schemas.py  ship.ps1  solve.ps1  test_output.txt  test_output2.txt  (+1 more)
.claude/agents/: developer.md  orchestrator.md  reproducer.md  reviewer.md  tester.md
.claude/bugs/: open.md
.claude/hooks/: guardrails.md
.claude/skills/: bug-lifecycle.md  ci-monitoring.md  code-review.md  debugging.md  new-feature.md  refactor.md  release.md
.github/prompts/: solve.prompt.md
.github/workflows/: claude-fix.yml  nightly-tests.yml  pr-tests.yml  promote-to-prod.yml  weekly-tests.yml
android/: .gitignore  CLAUDE.md  PUBLISH.md  build.gradle.kts  gradle.properties  gradlew.bat  keystore.properties.template  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/investai/app/: InvestAIApp.kt  InvestAIApplication.kt  MainActivity.kt
android/app/src/main/java/com/investai/app/data/api/: AuthInterceptor.kt  InvestAIApi.kt
android/app/src/main/java/com/investai/app/data/local/: AppDatabase.kt
android/app/src/main/java/com/investai/app/data/preferences/: ThemePreferences.kt
android/app/src/main/java/com/investai/app/data/repository/: AuthRepository.kt  MarketRepository.kt
android/app/src/main/java/com/investai/app/di/: AppModule.kt  NetworkModule.kt
android/app/src/main/java/com/investai/app/navigation/: NavGraph.kt  Screen.kt
android/app/src/main/java/com/investai/app/ui/alerts/: AlertsScreen.kt  AlertsViewModel.kt
android/app/src/main/java/com/investai/app/ui/auth/: AuthViewModel.kt  ForgotPasswordScreen.kt  LoginScreen.kt
android/app/src/main/java/com/investai/app/ui/autopilot/: AutoPilotScreen.kt  AutoPilotViewModel.kt
android/app/src/main/java/com/investai/app/ui/budgets/: BudgetsScreen.kt  BudgetsViewModel.kt
android/app/src/main/java/com/investai/app/ui/calendar/: CalendarScreen.kt  CalendarViewModel.kt
android/app/src/main/java/com/investai/app/ui/comparison/: ComparisonScreen.kt  ComparisonViewModel.kt
android/app/src/main/java/com/investai/app/ui/components/: MetricCard.kt  PriceText.kt  ProgressRing.kt  SectionHeader.kt  SignalBadge.kt  SkeletonLoader.kt  SparklineChart.kt  StockListItem.kt
android/app/src/main/java/com/investai/app/ui/education/: EducationScreen.kt  EducationViewModel.kt
android/app/src/main/java/com/investai/app/ui/home/: HomeScreen.kt  HomeViewModel.kt
android/app/src/main/java/com/investai/app/ui/ilfunds/: ILFundsScreen.kt  ILFundsViewModel.kt
android/app/src/main/java/com/investai/app/ui/invest/: InvestScreen.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml  ic_splash_logo.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: network_security_config.xml
android/gradle/: libs.versions.toml
docs/: architecture.md  ship-pipeline.md
docs/adr/: 001-auth-cookies.md  002-database-migration.md  003-market-data-fallback.md  004-vanilla-frontend.md
docs/runbooks/: adding-market-regions.md  render-deployment.md
src/: CLAUDE.md  auth.py  database.py  main.py  models.py
src/routers/: CLAUDE.md  admin.py  alerts.py  assistant.py  autopilot.py  budgets.py  calendar_router.py  categories.py  comparison.py  dashboard.py  dca.py  dividend_analysis.py  education.py  etf_analysis.py  export.py  heatmap.py  israeli_funds.py  market.py  news.py  picks_tracker.py  portfolio.py  profile.py  public_stock.py  recommendations.py  screener.py  sentiment.py  smart_advisor.py  stock_detail.py  trading_advisor.py  transactions.py  value_scanner.py
src/schemas/: alerts.py  assistant.py  autopilot.py  budgets.py  categories.py  dashboard.py  dca.py  portfolio.py  profile.py  recommendations.py  screener.py  sentiment.py  transactions.py
src/services/: CLAUDE.md  advanced_indicators.py  assistant.py  autopilot.py  background_scheduler.py  calendar_service.py  company_dna.py  data_provider.py  dca.py  dividend_analysis.py  education.py  etf_analysis.py  finnhub_client.py  funder_scraper.py  github_issues.py  israeli_funds.py  market_data.py  news.py  pattern_detection.py  persistence.py  picks_tracker.py  portfolio.py  recommendations.py  risk_profile.py  screener.py  sentiment.py  smart_advisor.py  stock_detail.py  tase_client.py  technical_analysis.py  trading_advisor.py  value_scanner.py
src/services/scrapers/: __init__.py  base.py  finviz_scraper.py  pipeline.py  reddit_scraper.py  tradingview_scraper.py
static/: CLAUDE.md  app.js  index.html  login.html  style.css
static/data/: discord-picks.json  il-funds.json
static/js/: admin.js  advisor.js  alerts.js  api.js  app.js  assistant.js  autopilot.js  budgets.js  bulk-manage.js  calendar.js  comparison.js  context-menu.js  dashboard.js  dca.js  dividends.js  education.js  etf-analysis.js  export.js  heatmap.js  help-drawer.js  il-funds.js  market.js  news.js  pagination.js  picks-tracker.js  portfolio.js  profile.js  recommendations.js  screener.js  smart-advisor.js  stock-detail.js  tooltips.js  tour.js  transactions.js  value-scanner.js  watchlist.js
tests/: CLAUDE.md  _bench.py  bench_advisor.py  conftest.py  debug_spark.py  debug_sparkline.py  debug_sparkline_browser.py  debug_sparkline_live.py  test_api_smoke.py  test_e2e.py  test_live_site.py
(+36 files in other folders)
