# ──────────────────────────────────────────────────────────────
# InvestAI – Code Quality Configuration
# ──────────────────────────────────────────────────────────────

[project]
name = "investai"
requires-python = ">=3.12"

# ── Ruff (linter + formatter) ────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes (undefined names, unused imports, etc.)
    "I",     # isort (import sorting)
    "N",     # pep8-naming
    "UP",    # pyupgrade (modernize syntax)
    "B",     # flake8-bugbear (common bugs)
    "SIM",   # flake8-simplify
    "S",     # bandit (security checks)
    "T20",   # flake8-print (no print() in production code)
    "RET",   # flake8-return (return statement issues)
    "C4",    # flake8-comprehensions
    "PT",    # flake8-pytest-style
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",   # line too long – handled by formatter
    "S101",   # assert used – fine in tests
    "S105",   # hardcoded password – too many false positives with test code
    "S106",   # hardcoded password in func arg
    "S110",   # try-except-pass – too noisy for startup code
    "S112",   # try-except-continue – acceptable pattern
    "T201",   # print() – we use it for CLI scripts & debug
    "B008",   # function call in default arg – required by FastAPI Depends()
    "B905",   # zip() without strict= – cosmetic, Python 3.10+ feature
    "RET504", # unnecessary assignment before return
    "RET505", # unnecessary else after return – cosmetic preference
    "S311",   # random – not used for crypto
    "S607",   # partial executable path – git/npm etc. are fine
    "UP007",  # Use X | Y for union – already using this
    "UP015",  # unnecessary mode argument – cosmetic
    "UP042",  # str+Enum inheritance – valid pre-3.11 pattern
    "UP045",  # Use X | None – Optional[] is still clear
    "I001",   # import sorting – cosmetic, fix locally with ruff check --fix
    "E401",   # multiple imports on one line
    "E402",   # module level import not at top – common pattern in FastAPI apps
    "E741",   # ambiguous variable name – used intentionally (l for low)
    "N806",   # variable should be lowercase – BATCH_SIZE etc. used as constants
    "C401",   # unnecessary generator – cosmetic
    "F541",   # f-string without placeholders – harmless, fix incrementally
    "F841",   # local variable assigned but unused – fix incrementally
    "SIM102", # nested if – sometimes clearer separate
    "SIM105", # use contextlib.suppress – cosmetic preference
    "SIM108", # use ternary – sometimes less readable
    "SIM113", # use enumerate for index – cosmetic
    "SIM114", # combine if branches – sometimes clearer separate
    "RUF001", # ambiguous unicode – en-dashes in strings are fine
    "RUF002", # ambiguous unicode in docstrings
    "RUF003", # ambiguous unicode in comments
    "RUF012", # mutable class defaults – too noisy for test fixtures
    "RUF013", # implicit Optional – common in existing code
    "RUF100", # unused noqa directive
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "T20", "B011", "PT019", "PT018", "PT001", "B007"]  # relax rules in tests
"src/services/**" = ["T201"]               # services may print debug info
"make_admin.py" = ["T201"]                 # CLI script

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ── Mypy (type checker) ──────────────────────────────────────
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false              # gradual: don't force types everywhere yet
check_untyped_defs = true                  # but DO check bodies of untyped functions
ignore_missing_imports = true              # many deps lack stubs
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

# ── Bandit (security, standalone) ─────────────────────────────
[tool.bandit]
exclude_dirs = ["tests", "__pycache__"]
skips = ["B101", "B311"]
